# gotcha

./: .gitignore  README.md  build.gradle  module.gradle
gradle/wrapper/: gradle-wrapper.properties
module/: .gitignore  build.gradle
module/jni/: Android.mk
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  config.cpp  gotcha.cpp  main.cpp
module/src/main/cpp/gadget/: CMakeLists.txt  gadget.c  gadget.cpp  gadget.h
module/src/main/cpp/include/: config.h  log.h
template/: config.prop  service.sh
template/webroot/: index.html
